crates/eml_cli/tests/snapshots/ui__run@deep_recursion.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/deep_recursion.em
---
--- stdout ---
100000
--- stderr ---
