crates/eml_cli/tests/snapshots/ui__run@effect_abort.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effect_abort.em
---
--- stdout ---
value: 3
error: not positive
8
aborted: too big
--- stderr ---
