crates/eml_cli/tests/snapshots/ui__run@effect_deep.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effect_deep.em
---
--- stdout ---
tick
tick
tick
3
201
15
log: before
7
--- stderr ---
