crates/eml_cli/tests/snapshots/ui__run@effect_loop.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/effect_loop.em
---
--- stdout ---
total: 250000
--- stderr ---
