crates/eml_cli/tests/snapshots/ui__run@empty.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/empty.em
---
--- stdout ---
--- stderr ---
