crates/eml_cli/tests/snapshots/ui__run@hello.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/hello.em
---
--- stdout ---
Hello, world!
--- stderr ---
